samples/invalid/06-orphan-node.mmd
%% Diagram: Orphan node

direction LR

a["A"]
b["B"]
a --> a
